linked css and javascript. added JSON parsing

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Trivia Night!</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+    <script src="script.js"></script>
+    <p id="JSON"></p>
 </body>
 </html>
