--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 <body>
     <script src="script.js"></script>
     <p id="JSON"></p>
+    <h1 id="Header">Question Number</h1>
     <h3 id="Question"></h3>
-    <button id="answer1" onclick="loadComplete()"></button>
-    <button id="answer2" onclick="loadComplete()"></button>
-    <button id="answer3" onclick="loadComplete()"></button>
-    <button id="answer4" onclick="loadComplete()"></button>
+    <div id="buttons">
+        <button id="answer1" onclick="loadComplete()"></button>
+        <button id="answer2" onclick="loadComplete()"></button>
+        <button id="answer3" onclick="loadComplete()"></button>
+        <button id="answer4" onclick="loadComplete()"></button>
+    </div>
 
 </body>
 <footer>
